Added button redirecting from inventory to combat. NOTE: THIS ONLY REDIRECTS TO COMBAT, REFACTOR LATER

--- a/idk/src/main/resources/templates/Inventory.html
+++ b/idk/src/main/resources/templates/Inventory.html
@@ -40,8 +40,11 @@ unhide the elements.
     <br/>
     <br/>
     <p th:text="${output}">
-
     </p>
+    <form action="EnterCombat" method="get">
+        <input type="submit" value="Return to game"/> <!-- TODO edit so it takes us back to wherever we were-->
+    </form>
+
 </body>
 
 </html>
