Basic general cleanup (whitespace, comments, etc.)

--- a/idk/src/main/resources/templates/fragments/SampleNavbar.html
+++ b/idk/src/main/resources/templates/fragments/SampleNavbar.html
@@ -13,6 +13,15 @@
             <td>
                 <form action="Inventory" method="get">
                     <input type="submit" value="Inventory"/>
+                    <input type="submit" value="Critter details"/>
+                    <label for="selected-critter">Active critter:</label>
+
+                    <select name="critters" id="selected-critter">
+                        <option value="">--Please choose an option--</option>
+                        <option value="1">Red Widget (4/4)</option>
+                        <option value="2">Blue flaming widget (20/20)</option>
+                        <option value="2">Ice gadget (10/18)</option>
+                    </select>
                 </form>
             </td>
         </tr>
