Minor cleanup in View and add placehold City view

--- a/idk/src/main/resources/templates/Inventory.html
+++ b/idk/src/main/resources/templates/Inventory.html
@@ -12,7 +12,10 @@ unhide the elements.
 -->
 
 <head>
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
     <title> Menu viewing</title>
+    <div th:insert="fragments/SampleNavbar" id="huh">
+    </div>
 </head>
 
 <body>
