--- a/idk/src/main/resources/templates/fragments/SampleNavbar.html
+++ b/idk/src/main/resources/templates/fragments/SampleNavbar.html
@@ -1,10 +1,14 @@
 <div class="SampleNavbar">
     <!--
         This will be the menu, Rename to menu when available.
-
-
-
     -->
+    <div>
+        <a href="EnterCombat">Combat</a>
+        <a href="Inventory">Inventory</a>
+        <a href="Game">Game</a>
+        <a href="/">Main Page</a>
+        <a href="City">City</a>
+    </div>
     <p>
        Menu! ==================>
     </p>
