UI cleanup for the header

--- a/idk/src/main/resources/templates/City.html
+++ b/idk/src/main/resources/templates/City.html
@@ -1,9 +1,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-    <title>City view</title> 
-    <div th:insert="fragments/SampleNavbar" id="huh">
-    </div>
+    <title>City view</title>
+    <link th:href="@{/css/style.css}" rel="stylesheet" />
+    <div th:insert="fragments/header" id="huh"></div>   
 </head>
 
 <body>
