--- a/idk/src/main/resources/templates/Combat.html
+++ b/idk/src/main/resources/templates/Combat.html
@@ -1,20 +1,24 @@
 <html xmlns:th="http://www.thymeleaf.org">
-    <head th:insert="fragments/SampleNavbar" id="huh">
-
-    </head>
-    <body>
-        <p th:each="b : ${CombatOutput}" th:text="${b}">
-        </p>
-        <br/>
-        <br/>
-        <table>
-            <tr th:each="b : ${FightOptions}">
-                <td >
-                    <form action="EnterCombat" method="post">
-                        <input th:name="Option" th:value="${b}" type="submit"/>
-                    </form>
-                </td>
-            </tr>
-        </table>
-    </body>
+<head>
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+    <title>Combat view</title> 
+    <link th:href="@{/css/style.css}" rel="stylesheet" />
+    <div th:insert="fragments/header" id="huh"></div>
+</head>
+        
+<body>
+    <p th:each="b : ${CombatOutput}" th:text="${b}">
+    </p>
+    <br/>
+    <br/>
+    <table>
+        <tr th:each="b : ${FightOptions}">
+            <td >
+                <form action="EnterCombat" method="post">
+                    <input th:name="Option" th:value="${b}" type="submit"/>
+                </form>
+            </td>
+        </tr>
+    </table>
+</body>
 </html>
