--- a/idk/src/main/resources/templates/MainPage.html
+++ b/idk/src/main/resources/templates/MainPage.html
@@ -5,9 +5,10 @@
 </head>
 
 <body>
-    <h3>AAAAAAAAAAAA</h3> 
-    <br/>
-    <br/>
+    <h2>Welcome to Critter Quest!</h2> 
+    <p>
+        Please sign in to continue.
+    </p>
     <div class="form">
         <form action="Inventory" method="get">
             <input id="action" name="action" type="hidden" value="welcome" />
