--- a/idk/src/main/resources/templates/Game.html
+++ b/idk/src/main/resources/templates/Game.html
@@ -1,9 +1,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-    <title> Welcome to game </title> 
-    <div th:insert="fragments/SampleNavbar" id="huh">
-    </div>
+    <title>Game view</title> 
+    <link th:href="@{/css/style.css}" rel="stylesheet" />
+    <div th:insert="fragments/header"></div>
 </head>
 
 <body>
