--- a/idk/src/main/resources/templates/fragments/header.html
+++ b/idk/src/main/resources/templates/fragments/header.html
@@ -1,17 +1,10 @@
-<div class="SampleNavbar">
-    <!--
-        This will be the menu, Rename to menu when available.
-    -->
-    <div>
-        <a href="EnterCombat">Combat</a>
-        <a href="Inventory">Inventory</a>
-        <a href="Game">Game</a>
-        <a href="/">Main Page</a>
-        <a href="City">City</a>
-    </div>
-    <p>
-       Menu! ==================>
-    </p>
+<div class="header">
+    <p align="center">Critter Quest</p>
+    <a href="EnterCombat">Combat</a>
+    <a href="Inventory">Inventory</a>
+    <a href="Game">Game</a>
+    <a href="/">Main Page</a>
+    <a href="City">City</a>
     <table>
         <tr>
             <td>
@@ -30,8 +23,4 @@
             </td>
         </tr>
     </table>
-
-    <p>
-        Menu! ==================>
-    </p>
 </div>
