--- a/idk/src/main/resources/templates/Login.html
+++ b/idk/src/main/resources/templates/Login.html
@@ -10,12 +10,12 @@
         Please sign in to continue.
     </p>
     <div class="form">
-        <form action="Inventory" method="get">
+        <form action="Login" method="post">
             <input id="action" name="action" type="hidden" value="welcome" />
             <table>
                 <tr>
                     <td> NAME: </td>
-                    <td><input id="name" name="Uname"> </td>
+                    <td><input id="name" name="name"> </td>
                     <td><input type="submit" value="Submit"></td> 
                 </tr>
             </table>
