--- a/idk/src/main/resources/templates/fragments/header.html
+++ b/idk/src/main/resources/templates/fragments/header.html
@@ -1,13 +1,17 @@
 <div class="header">
-    <p align="center">Critter Quest</p>
-    <a href="EnterCombat">Combat</a>
-    <a href="Inventory">Inventory</a>
-    <a href="Game">Game</a>
-    <a href="/">Main Page</a>
-    <a href="City">City</a>
-    <table>
+    <table width="100%">
+        <tr>
+            <td colspan="3" align="center">Critter Quest</td>
+        </tr>
         <tr>
             <td>
+                <a href="EnterCombat">Combat</a>
+                <a href="Inventory">Inventory</a>
+                <a href="Game?action=review">Game</a>
+                <a href="/">Main Page</a>
+                <a href="City">City</a>
+            </td>
+            <td align="center">
                 <form action="Inventory" method="get">
                     <input type="submit" value="Inventory"/>
                     <input type="submit" value="Critter details"/>
@@ -20,6 +24,9 @@
                         <option value="2">Ice gadget (10/18)</option>
                     </select>
                 </form>
+            </td>
+            <td align="right">
+                <div th:text="${name}"></div>
             </td>
         </tr>
     </table>
