--- a/idk/src/main/resources/templates/City.html
+++ b/idk/src/main/resources/templates/City.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h3 th:text="${cityName}"></h3>
+    <h3 th:text="@{Welcome to {name}(name=${cityName})}!"></h3>
     <br/>
     <p>Shops:</p>
     <ul>
