Created basic stubbed template for critter details.

--- a/idk/src/main/resources/templates/fragments/header.html
+++ b/idk/src/main/resources/templates/fragments/header.html
@@ -5,6 +5,7 @@
     <a href="Game">Game</a>
     <a href="/">Main Page</a>
     <a href="City">City</a>
+    <a href="CritterDetails"> Critter Descriptions</a>
     <table>
         <tr>
             <td>
