--- a/idk/src/main/resources/templates/fragments/header.html
+++ b/idk/src/main/resources/templates/fragments/header.html
@@ -19,6 +19,7 @@
                         <option value="1">Red Widget (4/4)</option>
                         <option value="2">Blue flaming widget (20/20)</option>
                         <option value="2">Ice gadget (10/18)</option>
+                        <!--TODO: implement NONSTUBBED dropdown.-->
                     </select>
                 </form>
             </td>
