--- a/idk/src/main/resources/templates/CritterDescription.html
+++ b/idk/src/main/resources/templates/CritterDescription.html
@@ -6,7 +6,7 @@
                 <td th:text="${Name}">
                 </td>
                 <td> || </td>
-                <td>
+                <td th:text="${SName}">
                     Insert Species Name
                 </td>
             </tr>
