--- a/idk/src/main/resources/templates/CritterDescription.html
+++ b/idk/src/main/resources/templates/CritterDescription.html
@@ -1,6 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <div th:insert="fragments/header" id="huh"></div>
+        <link th:href="@{/css/style.css}" rel="stylesheet" />
     </head>
     <body>
         <!--TODO: add dropdown to cycle through party!-->
