Add basic navigation between cities

--- a/idk/src/main/resources/templates/City.html
+++ b/idk/src/main/resources/templates/City.html
@@ -8,6 +8,8 @@
 
 <body>
     <h3 th:text="@{'Welcome to ' + ${cityName}}" />
+    <p th:text="@{'This city is governed by ' + ${leader}}" />
+    <p th:text="@{'The population is ' + ${population}}" />
     <br/>
     <p>Shops:</p>
     <ul>
