--- a/idk/src/main/resources/templates/Path.html
+++ b/idk/src/main/resources/templates/Path.html
@@ -9,5 +9,8 @@
 <body>
     <h3 th:text="${pathName}"></h3>
     <br/>
-    <p>TO DO</p>
+    <p th:text="${pathText}"></p>
+    <br/>
+    <a href="/City">Enter the city</a>
+</body>
 </html>
