Minor UI cleanup and username rename

--- a/idk/src/main/resources/templates/CritterDescription.html
+++ b/idk/src/main/resources/templates/CritterDescription.html
@@ -1,7 +1,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <div th:insert="fragments/header" id="huh"></div>
+        <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+        <title>City view</title>
         <link th:href="@{/css/style.css}" rel="stylesheet" />
+        <div th:insert="fragments/header"></div>   
     </head>
     <body>
         <!--TODO: add dropdown to cycle through party!-->
