--- a/idk/src/main/resources/templates/Inventory.html
+++ b/idk/src/main/resources/templates/Inventory.html
@@ -12,7 +12,7 @@ unhide the elements.
 -->
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-    <title> Menu viewing</title>
+    <title>Inventory view</title>
     <link th:href="@{/css/style.css}" rel="stylesheet" />
     <div th:insert="fragments/header"></div>
 </head>
