--- a/idk/src/main/resources/templates/Path.html
+++ b/idk/src/main/resources/templates/Path.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-    <title>Shop view</title>
+    <title>Path view</title>
     <link th:href="@{/css/style.css}" rel="stylesheet" />
     <div th:insert="fragments/header"></div>   
 </head>
