--- a/idk/src/main/resources/static/css/style.css
+++ b/idk/src/main/resources/static/css/style.css
@@ -1,11 +1,25 @@
+body {
+    background-color: lightblue;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+h2 {
+    font-family: cursive;
+}
+
 .header {
     background-color: darkcyan;
     color: black;
-    padding: 20px;
+    padding: 10px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
 }
 
-body {
-    background-color: lightblue;
+.body-text {
+    background-color: black;
+    color: white;
+    padding: 10px;
 }
