Add basic critter handling for gyms

--- a/idk/src/main/resources/templates/fragments/header.html
+++ b/idk/src/main/resources/templates/fragments/header.html
@@ -3,11 +3,11 @@
     <table width="100%">
         <tr>
             <td>
-                <a href="EnterCombat">Combat</a>
-                <a href="Inventory">Inventory</a>
-                <a href="Game?action=review">Game</a>
-                <a href="City">City</a>
-                <a href="CritterDetails"> Critter Descriptions</a>
+                <a href="/EnterCombat">Combat</a>
+                <a href="/Inventory">Inventory</a>
+                <a href="/Game?action=review">Game</a>
+                <a href="/City">City</a>
+                <a href="/CritterDetails"> Critter Descriptions</a>
             </td>
             <td align="center">
                 <form action="Inventory" method="get">
