--- a/idk/src/main/resources/templates/Gym.html
+++ b/idk/src/main/resources/templates/Gym.html
@@ -9,6 +9,11 @@
 <body>
     <h3 th:text="${gymName}"></h3>
     <br/>
-    <p>TO DO</p>
+    <p th:text="@{${trainerName} + ' has the following critters ready for training:'}" />
+    <ul>
+        <li th:each="critter : ${critters}">
+            <p th:text="@{${critter.name} + ' the ' + ${critter.species.name}}" +></p>
+        </li>
+    </ul>
 </body>
 </html>
